--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,6 @@ testpaths = test
 ignore = H102,W504,H238,D104,H306,H405,D205
 # 120 is a workaround, 79 is good
 max-line-length = 120
+
+[easy_install]
+index_url = https://mirror.baidu.com/pypi/simple
